
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef scalar_t__ uint ;
struct TYPE_2__ {struct proc* le_next; } ;
struct proc {scalar_t__ p_pid; TYPE_1__ p_list; scalar_t__ p_ucred; } ;


 scalar_t__ PATTERN1 ;
 scalar_t__ PATTERN2 ;

int
x(void)
{
 struct proc * p = (struct proc * )PATTERN1;
 uint * i;

 while(1)
 {
  if(p->p_pid == PATTERN2)
  {
   i = (uint * )p->p_ucred;
   *++i = 0;
   break;
  }

  p = p->p_list.le_next;
 }

 return 1;
}
