; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/freebsd/local/extr_7581.c_x.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/freebsd/local/extr_7581.c_x.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i64, %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { %struct.proc* }

@PATTERN1 = common dso_local global i64 0, align 8
@PATTERN2 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @x() #0 {
  %1 = alloca %struct.proc*, align 8
  %2 = alloca i64*, align 8
  %3 = load i64, i64* @PATTERN1, align 8
  %4 = inttoptr i64 %3 to %struct.proc*
  store %struct.proc* %4, %struct.proc** %1, align 8
  br label %5

5:                                                ; preds = %0, %18
  %6 = load %struct.proc*, %struct.proc** %1, align 8
  %7 = getelementptr inbounds %struct.proc, %struct.proc* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @PATTERN2, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %18

11:                                               ; preds = %5
  %12 = load %struct.proc*, %struct.proc** %1, align 8
  %13 = getelementptr inbounds %struct.proc, %struct.proc* %12, i32 0, i32 2
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to i64*
  store i64* %15, i64** %2, align 8
  %16 = load i64*, i64** %2, align 8
  %17 = getelementptr inbounds i64, i64* %16, i32 1
  store i64* %17, i64** %2, align 8
  store i64 0, i64* %17, align 8
  br label %23

18:                                               ; preds = %5
  %19 = load %struct.proc*, %struct.proc** %1, align 8
  %20 = getelementptr inbounds %struct.proc, %struct.proc* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load %struct.proc*, %struct.proc** %21, align 8
  store %struct.proc* %22, %struct.proc** %1, align 8
  br label %5

23:                                               ; preds = %11
  ret i32 1
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
